engagement child div restyle

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h3 class="text-6xl">Engagement</h3>
         </header>
 
-        <div class="flex-initial lg:ml-auto w-1/2  flex flex-col gap-10">
+        <div class="flex-initial lg:ml-auto w-full md:w-1/2  flex flex-col gap-10">
           <article>
             <header>
               <h3 class="font-semibold text-2xl my-2">Partner Collaboration</h3>
