--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="flex flex-col lg:grid grid-cols-2 gap-4 md:gap-0 flex-initial lg:ml-auto">
           <div class="row-span-3 flex item-center justify-center bg-[#121212] rounded-lg py-[17%] px-4 lg:py-[25%]">        
-            <article class="self-center w-3/5 m-auto">
+            <article class="self-center w-4/5 lg:w-3/5  m-auto">
               <header>
                 <h3 class="font-semibold text-4xl my-2">Partner Collaboration</h3>
               </header>
@@ -89,7 +89,7 @@
             </article>
           </div>
           <div class="flex item-center justify-center bg-[#212121] py-[17%] px-4">   
-            <article class="self-center w-3/5 m-auto">
+            <article class="self-center w-4/5 lg:w-3/5  m-auto">
               <header>
                 <h3 class="font-semibold text-4xl my-2">Online Advertisements</h3>
               </header>
@@ -101,7 +101,7 @@
             </article>
           </div>
           <div class="flex item-center justify-center bg-[#303030] py-[17%] px-4">   
-            <article class="self-center w-3/5 m-auto">
+            <article class="self-center w-4/5 lg:w-3/5  m-auto">
               <header>
                 <Workshops class="font-semibold text-4xl my-2">Workshops and Webinars</h3>
               </header>
