--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <header class=" header-container h-screen w-full flex gap-10 justify-center item-center "> 
           <div
-            class="self-center flex flex-col item-center flex-nowrap gap-4 overflow-hidden"
+            class="self-center flex flex-col item-center flex-nowrap gap-4 overflow-hidden p-4"
           >
             <h1 class="tagline text-left text-8xl font-extrabold"></h1>
             <div class="border-[1px] border-gray-500"></div>
