--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     <main
-      class="my-[10%] flex flex-col gap-64 item-center justify-around relative"
+      class="my-[10%] flex flex-col gap-64 item-center justify-between relative"
     >
 
     <div class="w-4/5 lg:w-3/5 self-center">
