--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <header class=" header-container h-screen w-full flex gap-10 justify-center item-center "> 
           <div
-            class="self-center flex flex-col item-center flex-nowrap gap-4 overflow-hidden p-4"
+            class="self-center w-fit flex flex-col item-center flex-nowrap gap-4 overflow-hidden p-4"
           >
             <h1 class="tagline text-left text-8xl font-extrabold"></h1>
             <div class="border-[1px] border-gray-500"></div>
@@ -54,7 +54,7 @@
     </header>
 
     <main
-      class="my-[10%] flex flex-col gap-64 item-center justify-between relative"
+      class="my-[10%] flex flex-col gap-64 item-center justify-around relative"
     >
 
     <div class="w-4/5 lg:w-3/5 self-center">
