--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
           <div class="flex item-center justify-center bg-[#212121] py-[17%] px-4">   
             <article class="self-center w-4/5 lg:w-3/5  m-auto">
               <header>
-                <h3 class="font-semibold text-4xl my-2">Online Advertisements</h3>
+                <h3 class="font-semibold text-4xl my-2">Online & Offline schooling tools</h3>
               </header>
               <p class="md:text-3xl">
-                Targeted micro-presentations to stakeholders, students, parents,
-                and investors through online ads on educational websites, career
-                platforms, and social media networks
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum eveniet adipisci enim voluptatem? Veritatis, eum. Voluptatem dolore eaque at vel! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, perferendis!
+
               </p>
             </article>
           </div>
