remove team member

--- a/index.html
+++ b/index.html
@@ -157,15 +157,12 @@
         <label for="" class="italic">Co-Founder</label>
      
       </div>
-      <div class="  ">
+      <!-- <div class="  ">
         <h2 class="font-bold">Yannick Dago</h2>
         <label for="" class="italic">Advisory - Finance</label>
 
-      </div>
-      <div class="   ">
-        <h2 class="font-bold">Mandar Pargunde</h2>
-        <label for="" class="italic">Co - Founder</label> 
-    </div>
+      </div> -->
+     
     </div>
       <h4 class="self-center">Contact us</h4>
       <div class="self-center hover:underline">
