updtae team member

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
      
       </div>
       <!-- <div class="  ">
-        <h2 class="font-bold">Yannick Dago</h2>
+        <h2 class="font-bold">Yannick Dago</h2>`
         <label for="" class="italic">Advisory - Finance</label>
 
       </div> -->
