--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     </header>
 
     <main
-      class="flex flex-col items-center justify-betweeen gap-64 text-lg lg:text-4xl"
+      class="flex flex-col items-center justify-betweeen gap-64 text-2xl lg:text-4xl"
     >
-      <div class="w-screen min-h-[60vh] flex items-center justify-center">
+      <div class="w-full min-h-[60vh] flex items-center justify-center">
         <div
-          class="text-lg lg:text-4xl w-4/5 lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
+          class="text-2xl lg:text-4xl w-4/5 lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
         >
           <article class="flex flex-col gap-4 justify-around">
             <p>
@@ -82,8 +82,8 @@
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="flex flex-col gap-4 justify-around order-4">
-            <p>
+          <article class="flex flex-col gap-4 justify-around order-4 lg:pl-[1rem]">
+            <p class="">
               We reposition local business to improve on their operational
               capabilities, increase margins, and create job opportunities for
               young people. We provide targeted companies access to our global
@@ -105,7 +105,7 @@
         allowfullscreen
       ></iframe>
 
-      <article class="w-4/5 m-auto lg:w-1/2 text-lg lg:text-4xl">
+      <article class="w-4/5 m-auto lg:w-1/2 text-2xl lg:text-4xl">
         <header class="">
           <h3 class="border-b-[1px] border-white uppercase">Market Insight</h3>
         </header>
@@ -129,7 +129,7 @@
         </p>
       </article>
 
-      <div class="w-fit m-auto px-8 opacity-80 text-lg lg:text-4xl">
+      <div class="w-fit m-auto px-8 opacity-80 text-2xl lg:text-4xl my-16">
         <h2 class="heading-secondary profile-heading font-bold text-4xl">
           Bayo Adebogun
         </h2>
