--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1 class="heading-primary">adebouge holdings</h1>
     </nav>
 
-    <header class="h-screen relative flex items-center justify-center">
+    <!-- <header class="h-screen relative flex items-center justify-center">
       <div
         class="subtitiles1 w-4/5 lg:w-1/2 px-[5%] flex flex-col item-center flex-nowrap gap-4 overflow-hidden"
       >
@@ -62,103 +62,112 @@
           class="tagline_description text-lg font-regular lg:text-4xl text-left"
         ></p>
       </div>
-    </header>
+    </header> -->
 
     <main
       class="flex flex-col items-center justify-betweeen gap-64 text-2xl lg:text-4xl"
     >
-      <div class="w-full min-h-[60vh] flex items-center justify-center">
+      <div class="w-full h-screen flex items-center justify-center">
         <div
-          class="text-2xl lg:text-4xl w-4/5 lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
+          class="text-2xl lg:text-4xl w-full h-full lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
         >
-          <article class="flex flex-col gap-4 justify-around">
-            <p>
-              <span class="font-bold">Adebouge Holdings</span>, is a
-              research-driven technology company, that is combating youth
-              unemployment in emerging economies through strategic partnerships
-              and our robust crowdsourcing capabilities.
+          <article class="w-4/5 m-auto">
+            <p class="">
+              <span class="font-bold">Adebouge Holdings</span> is a
+              research-driven tech company which addresses youth unemployment in
+              emerging economies through unique business as a service approach
+              and enabling impact investing projects through collaboration with
+              strategic U.S.-Nigeria partnerships.
             </p>
           </article>
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="flex flex-col gap-4 justify-around order-4 lg:pl-[1rem]">
+          <article class="order-4 w-4/5 m-auto">
             <p class="">
-              We reposition local business to improve on their operational
-              capabilities, increase margins, and create job opportunities for
-              young people. We provide targeted companies access to our global
-              resources through our vast network of collaborators to transform
-              them from small ventures into potential multibillion-dollar
-              organizations.
+              We work with partners in the target market to reposition and
+              revitalize local high potential businesses by enhancing
+              operational capabilities and foster profitability. Our aim is to
+              transform small ventures into potential global multibillion-dollar
+              organizations that create sustainable job opportunities for young
+              people.
             </p>
           </article>
           <div class="order-3 order-2 bg-work bg-top aspect-video"></div>
         </div>
       </div>
 
-      <iframe
-        class="sm:mx[10%] my-[10vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
-        src="https://www.youtube-nocookie.com/embed/WO2yLOpJaK0?si=7rfCNlXpM3OpAGiI"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <div class="">
+        <iframe
+          class="sm:mx[10%] my-[1vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
+          src="https://www.youtube-nocookie.com/embed/WO2yLOpJaK0?si=7rfCNlXpM3OpAGiI"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
 
-      <article class="w-4/5 m-auto lg:w-1/2 text-2xl lg:text-4xl">
-        <header class="">
-          <h3 class="border-b-[1px] border-white uppercase">Market Insight</h3>
+        <article id="insight-article" class="w-4/5 m-auto lg:w-1/2 text-regular lg:text-2xl">
+          <header id="insight-article-header" class="headexx">
+            <h3 class="border-b-[1px] border-white capitalize">
+              Market Insights
+            </h3>
+          </header>
+          <p>
+            According to Gordon Brown, former Prime Minister of Britain –
+            <i>
+              the world went through, covid, and the supply shock, then demand
+              shocks, the shocks and aftershocks associated with the ongoing war
+              in Ukraine, Gaza, and countless of other conflicts zone around the
+              world but still was able to tame inflation to around 3%,
+              unemployment in the US around 3.7% - thanks to AI.</i
+            >
+          </p>
+          <p>
+            Michael Spence Noble Prize Economist from NYU says the world is
+            about to experience productivity like nothing before. Companies
+            should prioritize productizing AI in all aspects of production that
+            makes sense while building a layer of hum control around it. The
+            Markets agree, Satya Nadella, Sam Altman, Mark Zuckerberg, Jeff
+            Bezos, Tim Cook, Elon Musk, Srini Kunshik etc. have gone ahead to
+            prioritize and pivoted their business structure accordingly. We plan
+            to be at the forefront of bring AI to emerging markets.
+          </p>
+        </article>
+      </div>
+
+      <div class="w-4/5 lg:w-1/2 text-regular lg:text-2xl m-8 border-white">
+        <header>
+          <h3 class="profile-heading font-bold">Bayo Adebogun</h3>
+          <h4 class="profile-heading">Research, Technology, jobs</h4>
         </header>
         <p>
-          According to Gordon Brown, former Prime Minister of Britain – <i> the
-          world went through, covid, and the supply shock, then demand shocks,
-          the shocks and aftershocks associated with the ongoing war in
-          Ukraine, Gaza, and countless of other conflicts zone around the world
-          but still was able to tame inflation to around 3%, unemployment in the
-          US around 3.7% - thanks to AI.</i>
+          Bayo, our co-founder, was born and educated in Nigeria, and the US,
+          brings unique leadership experience from Nigerian education,
+          government, and tech sectors. With a decade managing Public-Private
+          Partnerships and 20+ years in global enterprise project management,
+          Bayo, a certified PMP, co-founded multiple companies. Actively engaged
+          with University of Chicago Booth entrepreneurship resources, he
+          participates in events by the Polsky Center, Rustandy Center, and
+          Alumni series. Bayo's philanthropic efforts include educational
+          funding through Adebouge Holding collaboration, mentorship for the
+          University of Kansas, and advocacy on economic matters with Eldridge
+          Investments Group. Residing in Sugar Land, Texas, he enjoys outdoor
+          activities with his family of wife with 2 kids.
         </p>
-        <p>
-          Michael Spence Noble Prize Economist from NYU says the world is about
-          to experience productivity like nothing before. Companies should
-          prioritize productizing AI in all aspects of production that makes
-          sense while building a layer of hum control around it. The Markets
-          agree, Satya Nadella, Sam Altman, Mark Zuckerberg, Jeff Bezos, Tim Cook, Elon
-          Musk, Srini Kunshik etc. have gone ahead to prioritize and pivoted the
-          business structure accordingly. We plan to be at the forefront of
-          bring AI to emerging markets.
-        </p>
-      </article>
-
-      <div class="w-fit m-auto px-8 opacity-80 text-2xl lg:text-4xl my-16">
-        <h2 class="heading-secondary profile-heading font-bold text-4xl">
-          Bayo Adebogun
-        </h2>
-        <h6 class="">University of Chicago Booth School of Business MBA</h6>
-        <div class="mt-[2.5rem] flex gap-8 align-center justify-end">
-          <a
-            class="link w-[2.5rem] aspect-square block"
-            href="https://twitter.com/BayoAdebogun?s=20&t=uHMYAVR9alnVAD515xanCA"
-          >
-            <svg class="w-full animate-pulse aspect-square block">
-              <use href="./assets/img/sprite.svg#icon-twitter"></use>
-            </svg>
-          </a>
-          <a
-            class="link w-[2.5rem] aspect-square block"
-            href="https://www.linkedin.com/in/adebayo-adebogun-pmp?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAAhrmD4By6dXII6HnwPzEhNhvRYvr7kJBIY&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BgFG0nUwzSY%2BuHsxHgm4Dyw%3D%3D"
-          >
-            <svg class="w-full animate-pulse aspect-square block">
-              <use href="./assets/img/sprite.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </div>
       </div>
     </main>
 
-    <!-- Founder Link -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
-
+    <footer
+      class="py-10 w-4/5 m-aut text-center flex items-center justify-center"
+    >
+      <p>
+        Contact Us:
+        <a href="mailto:info@adebouge.com" class="underline"
+          >info@adebouge.com</a
+        >
+      </p>
+    </footer>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 
