Market insight detiail fill in

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div
           class="text-2xl lg:text-4xl w-full h-full lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
         >
-          <article class="w-4/5 m-auto">
+          <article class="w-4/5 place-self-center	">
             <p class="">
               <span class="font-bold">Adebouge Holdings</span> is a
               research-driven tech company which addresses youth unemployment in
@@ -83,7 +83,7 @@
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="order-4 w-4/5 m-auto">
+          <article class="order-4 w-4/5 place-self-center	">
             <p class="">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
@@ -107,38 +107,39 @@
           allowfullscreen
         ></iframe>
 
-        <article id="insight-article" class="w-4/5 m-auto lg:w-1/2 text-regular lg:text-2xl">
+        <article
+          id="insight-article"
+          class="w-4/5 m-auto lg:w-1/2 text-regular lg:text-2xl"
+        >
           <header id="insight-article-header" class="headexx">
             <h3 class="border-b-[1px] border-white capitalize">
               Market Insights
             </h3>
+            <h4>from Permacrisis</h4>
           </header>
           <p>
-            According to Gordon Brown, former Prime Minister of Britain –
-            <i>
-              the world went through, covid, and the supply shock, then demand
-              shocks, the shocks and aftershocks associated with the ongoing war
-              in Ukraine, Gaza, and countless of other conflicts zone around the
-              world but still was able to tame inflation to around 3%,
-              unemployment in the US around 3.7% - thanks to AI.</i
-            >
+            The world went through, covid demand, and the supply shock, then
+            demand shocks, the shocks and aftershocks associated with the
+            ongoing war in Ukraine, Gaza, and countless of other conflicts major
+            zones around the world but still was able to tame inflation to
+            around 3%, unemployment in the US around 3.7% - thanks to AI._Gordon
+            Brown, former Prime Minister of Britain.
           </p>
           <p>
-            Michael Spence Noble Prize Economist from NYU says the world is
-            about to experience productivity like nothing before. Companies
-            should prioritize productizing AI in all aspects of production that
-            makes sense while building a layer of hum control around it. The
-            Markets agree, Satya Nadella, Sam Altman, Mark Zuckerberg, Jeff
-            Bezos, Tim Cook, Elon Musk, Srini Kunshik etc. have gone ahead to
-            prioritize and pivoted their business structure accordingly. We plan
-            to be at the forefront of bring AI to emerging markets.
+            The world is about to experience productivity like nothing before.
+            Companies should prioritize productizing AI in all aspects of
+            production that makes sense while building a layer of human control
+            around it. The Markets agree, Satya Nadella, Sam Altman, Mark
+            Zuckerberg, Jeff Bezos, Tim Cook, Elon Musk, Srini Koushik etc. have
+            gone ahead to prioritize integrating AI into various aspects of
+            their business operations accordingly._ Micael Spence NYU Stern.
           </p>
         </article>
       </div>
 
       <div class="w-4/5 lg:w-1/2 text-regular lg:text-2xl m-8 border-white">
         <header>
-          <h3 class="profile-heading font-bold">Bayo Adebogun</h3>
+          <h3 class="border-b-[1px] border-white capitalize">Bayo Adebogun</h3>
           <h4 class="profile-heading">Research, Technology, jobs</h4>
         </header>
         <p>
@@ -159,7 +160,7 @@
     </main>
 
     <footer
-      class="py-10 w-4/5 m-aut text-center flex items-center justify-center"
+      class="py-10 w-4/5 m-auto text-center text-medium opacity-50 flex items-center justify-center"
     >
       <p>
         Contact Us:
@@ -167,7 +168,7 @@
           >info@adebouge.com</a
         >
       </p>
-    </footer>  
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 
